资源包/LabVIEW有用程序/例程DMC3000系列/VC.NET/例2_回原点运动/LTDMC.h

typedef unsigned long       DWORD;
typedef unsigned short      WORD;
//板卡配置	
DMC_API short __stdcall dmc_board_init(void); 	//初始化控制卡
DMC_API short __stdcall dmc_board_close(void);	//关闭控制卡
DMC_API short __stdcall dmc_board_reset(void); //硬件复位
DMC_API short __stdcall	dmc_get_CardInfList(WORD* CardNun,DWORD* CardTypeList,WORD* CardIdList);//读取初始化完成后的卡信息列表
DMC_API short __stdcall dmc_get_total_axes(WORD CardNo,DWORD *TotalAxis); 	//读取指定卡轴数
//3800专用 轴IO映射配置
DMC_API short __stdcall dmc_set_AxisIoMap(WORD CardNo,WORD Axis,WORD MsgType,WORD MapPortType,WORD MapPortIndex,DWORD Filter);
 
DMC_API short __stdcall dmc_get_AxisIoMap(WORD CardNo,WORD Axis,WORD MsgType,WORD* MapPortType,WORD* MapPortIndex,DWORD* Filter);
//下载参数文件
DMC_API short __stdcall dmc_download_configfile(WORD CardNo,const char *FileName);
//下载固件文件
DMC_API short __stdcall dmc_download_firmware(WORD CardNo,const char *FileName);
//限位/异常配置
DMC_API short __stdcall dmc_set_softlimit(WORD CardNo,WORD axis,WORD enable, WORD source_sel,WORD SL_action, long N_limit,long P_limit);	//设置软限位参数
DMC_API short __stdcall dmc_get_softlimit(WORD CardNo,WORD axis,WORD *enable, WORD *source_sel,WORD *SL_action,long *N_limit,long *P_limit);	//读取软限位参数
DMC_API short __stdcall dmc_set_el_mode(WORD CardNo,WORD axis,WORD el_enable,WORD el_logic,WORD el_mode); 	//设置EL信号
DMC_API short __stdcall dmc_get_el_mode(WORD CardNo,WORD axis,WORD *el_enable,WORD *el_logic,WORD *el_mode); 	//读取设置EL信号
DMC_API short __stdcall dmc_set_emg_mode(WORD CardNo,WORD axis,WORD enable,WORD emg_logic); 	//设置EMG信号
DMC_API short __stdcall dmc_get_emg_mode(WORD CardNo,WORD axis,WORD *enable,WORD *emg_logic); 	//读取设置EMG信号
//3800专用 外部减速停止信号及减速停止时间设置
DMC_API short __stdcall dmc_set_dstp_mode(WORD CardNo,WORD axis,WORD enable,WORD logic,DWORD time);
 	
DMC_API short __stdcall dmc_get_dstp_mode(WORD CardNo,WORD axis,WORD *enable,WORD *logic,DWORD *time);
 	
DMC_API short __stdcall dmc_set_dstp_time(WORD CardNo,WORD axis,DWORD time);
DMC_API short __stdcall dmc_get_dstp_time(WORD CardNo,WORD axis,DWORD *time);
//以上函数以毫秒为单位可继续使用，新函数将时间统一到秒为单位
DMC_API short __stdcall dmc_set_io_dstp_mode(WORD CardNo,WORD axis,WORD enable,WORD logic); //设置外部IO触发减速停止模式
DMC_API short __stdcall dmc_get_io_dstp_mode(WORD CardNo,WORD axis,WORD *enable,WORD *logic);
 	
DMC_API short __stdcall dmc_set_dec_stop_time(WORD CardNo,WORD axis,double  stop_time);//设置全局减速停止时间
DMC_API short __stdcall dmc_get_dec_stop_time(WORD CardNo,WORD axis,double * stop_time);