资源包/LabVIEW有用程序/例程DMC3000系列/Delphi/Demo_IOTest/LTDMC.pas

unit LTDMC;

interface

//板卡配置
function dmc_board_init():Smallint;stdcall; //初始化控制卡
function dmc_board_reset():Smallint;stdcall; 
function dmc_board_close():Smallint;stdcall; //关闭控制卡
function dmc_get_CardInfList(out CardNum:WORD;out CardTypeList:LongWORD;out CardIdList:WORD):Smallint;stdcall;  //获取所有卡号
function dmc_get_card_version(CardNo:WORD;out CardVersion:LongWORD):Smallint;stdcall; //读取控制卡硬件版本
function dmc_get_card_soft_version(CardNo:WORD;out FirmID:LongWORD;out SubFirmID:LongWORD):Smallint;stdcall; //读取控制卡硬件的固件版本
function dmc_get_card_lib_version(out LibVer:LongWORD):Smallint;stdcall;   //读取控制卡动态库版本
function dmc_get_total_axes(CardNo:WORD;out TotalAxis:longint):Smallint;stdcall; //读取指定卡轴数
//3800专用 轴IO映射配置
function dmc_set_AxisIoMap(CardNo:WORD;axis:WORD;IoType:WORD;MapIoType:WORD;MapIoIndex:WORD;Filter:LongWORD):Smallint;stdcall; 
function dmc_get_AxisIoMap(CardNo:WORD;axis:WORD;out IoType:WORD;out MapIoType:WORD;out MapIoIndex:WORD;out Filter:LongWORD):Smallint;stdcall; 
//下载参数文件
function dmc_download_configfile(CardNo:WORD;FileName:String):Smallint;stdcall;
//下载固件文件
function dmc_download_firmware(CardNo:WORD;FileName:String):Smallint;stdcall; 
//限位/异常设置
function dmc_set_emg_mode(CardNo:WORD;axis:WORD;enable:WORD;emg_logic:WORD):Smallint;stdcall;  //设置EMG信号
function dmc_get_emg_mode(CardNo:WORD;axis:WORD;out enbale:WORD;out emg_logic:WORD):Smallint;stdcall; //读取设置EMG信号
function dmc_set_el_mode(CardNo:WORD;axis:WORD;el_enable:WORD;el_logic:WORD;el_mode:WORD):Smallint;stdcall; //设置EL信号
function dmc_get_el_mode(CardNo:WORD;axis:WORD;out el_enable:WORD;out el_logic:WORD;out el_mode:WORD):Smallint;stdcall; //读取设置EL信号
function dmc_set_softlimit(CardNo:WORD;axis:WORD;enable:WORD;source_sel:WORD;SL_action:WORD;N_limit:longint;P_limit:longint):Smallint;stdcall; //设置软限位参数
function dmc_get_softlimit(CardNo:WORD;axis:WORD;out enable:WORD;out source_sel:WORD;out SL_action:WORD;out N_limit:longint;out P_limit:longint):Smallint;stdcall; //读取软限位参数
//外部减速停止信号及减速停止时间设置
function dmc_set_dstp_mode(CardNo:WORD;axis:WORD;enable:WORD;logic:WORD;time:WORD):Smallint;stdcall;
function dmc_get_dstp_mode(CardNo:WORD;axis:WORD;out enable:WORD;out logic:WORD;out time:WORD):Smallint;stdcall;
function dmc_set_dstp_time(CardNo:WORD;axis:WORD;time:WORD):Smallint;stdcall;
function dmc_get_dstp_time(CardNo:WORD;axis:WORD;out time:WORD):Smallint;stdcall;
//以上函数以毫秒为单位可继续使用，新函数将时间统一到秒为单位
function dmc_set_io_dstp_mode(CardNo:WORD;axis:WORD;enable:WORD;logic:WORD):Smallint;stdcall; //设置外部IO触发减速停止模式
function dmc_get_io_dstp_mode(CardNo:WORD;axis:WORD;out enable:WORD;out logic:WORD):Smallint;stdcall;
function dmc_set_dec_stop_time(CardNo:WORD;axis:WORD;time:double):Smallint;stdcall;//设置全局减速停止时间
function dmc_get_dec_stop_time(CardNo:WORD;axis:WORD;out time:double):Smallint;stdcall;
